improved cable chain example

--- a/README.adoc
+++ b/README.adoc
@@ -38,7 +38,7 @@ translate([150,0,5])
 cable_chain(WIDE_CABLE_CHAIN, length = 350, turn_angle = 180);
 
 // Chain STL helper
-XY_CABLE_CHAIN = ["name", 20, 20, 12, 2, 33];
+XY_CABLE_CHAIN = ["ABS_y_axis_cable_chain", 20, 20, 12, 4, 33];
 translate([250,0,5]) {
     cable_chain_section_body_and_cap(XY_CABLE_CHAIN);
     translate([0,50,0])
